--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
   <body>
     <div class="full-width header-wrapper">
       <header>
-        <h1>Style Tile Template</h1>
-        <h2>Project name</h2>
-        <h3>Style tile</h3>
-        <h4>Version 1</h4>
+        <h1>Style Tile</h1>
+        <h2>Skål!</h2>
+        <h3>Find the right beer for you</h3>
+        <h4>Or at least, for tonight</h4>
       </header>
     </div>
 
     <main>
       <div class="column">
         <section class="swatches">
-          <h3 class="section-heading">Colour swatches</h3>
+          <h3 class="section-heading">Colour palette</h3>
           <ul class="swatchgrid">
             <li class="color-swatch-1"></li>
             <li class="color-swatch-2"></li>
@@ -82,7 +82,7 @@
           </p>
         </section>
         <section class="adjectives">
-          <h3 class="section-heading">Another different list</h3>
+          <h3 class="section-heading">And here a list:</h3>
           <ul>
             <li>Just</li>
             <li>a</li>
