--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
     <div class="full-width">
       <footer>
-        <p>Be creative - don't just use this template as is!</p>
+        <p>A beer a day, keeps the sadness away!</p>
       </footer>
     </div>
   </body>
